--- a/doc/install.txt
+++ b/doc/install.txt
@@ -1,6 +1,6 @@
 Prerequisites
 
-PyDECnet requires Python 3.2 or later.
+PyDECnet requires Python 3.3 or later.
 
 Apart from standard Python modules, it requires the python-daemon
 module.  The "rcexpect" sample program also requires pexpect.
@@ -11,7 +11,17 @@ PyDECnet is a conventional pure Python module together with a top
 level script ("pydecnet").  To install it, extract the source tarball,
 and invoke setup.py:
 
-    python3.2 setup.py install
+    python3.3 setup.py install
 
-Substitute another python if appropriate; Python 3.2 is the minimum
+Substitute another python if appropriate; Python 3.3 is the minimum
 supported version.
+
+Unit test
+
+PyDECnet comes with a unit test collection.  This is mostly for
+development use, but feel free to use it.  To invoke it, use this
+command: 
+
+    python3.3 -m unittest discover
+
+Add "-v" to the end to see the name of each executed test as it runs.
