Update install doc
git-svn-id: svn://akdesign.dyndns.org/pydecnet/trunk/pydecnet@309 02bf3f84-b523-46f3-a765-a93b7296b289

--- a/doc/install.txt
+++ b/doc/install.txt
@@ -3,7 +3,8 @@ Prerequisites
 PyDECnet requires Python 3.3 or later.
 
 Apart from standard Python modules, it requires the python-daemon
-module.  The "rcexpect" sample program also requires pexpect.
+module.  The sample programs apitest2 and rctest use the "requests"
+module. 
 
 Installation
 
