--- a/pydecnet/doc/install.txt
+++ b/pydecnet/doc/install.txt
@@ -3,7 +3,8 @@ Prerequisites
 PyDECnet requires Python 3.3 or later.
 
 Apart from standard Python modules, it requires the python-daemon
-module.  The "rcexpect" sample program also requires pexpect.
+module.  The sample programs apitest2 and rctest use the "requests"
+module. 
 
 Installation
 
