--- a/pydecnet/doc/install.txt
+++ b/pydecnet/doc/install.txt
@@ -44,6 +44,20 @@ from that:
      python3 setup.py sdist
      pip3 install dist/decnet-1.0.tar.gz
 
+Running directly from the Subversion working directory
+
+If you want to run the current code in the working directory, without
+having to go through a reinstall each time there is a change, you need
+this command:
+
+     python3 setup develop
+
+That will create the "pydecnet" script in your default binary
+directory (typically /usr/local/bin on Linux systems, a suitable
+/Library/Frameworks directory on Mac OS) and a link to the Python
+modules in the Subversion working directory.  You can then invoke the
+"pydecnet" command to start the current code.
+
 Installation from the kit
 
 TODO: right now kits are not yet distributed.  
