Support Python 3.9 and (beta) 3.10.
IPv6 support for HTTP, HTTPS, and DECnet circuits.  Clean up the host
name/address handling in the various datalinks.

New syntax for specifying IP networking parameters for circuits,
though the old syntax also still works for IPv4.  See doc/config.txt
for details.

Fix display of endnode adjacencies in web monitor.

Some cleanups in circuit error handling.

Add "any remote address" support for DDCMP (TCP/Telnet) circuits.

Fix network mapper not to consider connect timeout as "the node is
up".  Suppress network scan if the mapper is isolated from the
network.

Fix length limit for NICE string entities.

Fix RQR handling in endnodes, so in an endnode whose circuit is down a
connect attempt is rejected with "unreachable" reason rather than
timing out.

Change GRE unit test to use IP, this requires having at least two
addresses for the local node (say, the loopback address plus an
interface address) for IPv4 and IPv6 (if supported).  Note that the
tests need to run as root since raw sockets are used.


git-svn-id: svn://akdesign.dyndns.org/pydecnet/trunk/pydecnet@570 02bf3f84-b523-46f3-a765-a93b7296b289

--- a/doc/install.txt
+++ b/doc/install.txt
@@ -2,8 +2,10 @@ Prerequisites
 
 PyDECnet requires Python 3.3 or later.
 
-Apart from standard Python modules, pydecnet uses the following
-optional modules:
+Apart from standard Python modules, PyDECnet requires the "psutil"
+module.
+
+PyDECnet can also use the following optional modules:
 
 1. python-daemon: if present, the --daemon command line option is
    available.
