--- a/pydecnet/CHANGES.txt
+++ b/pydecnet/CHANGES.txt
@@ -3,6 +3,12 @@ change at the top.  "Significant" means a non-trivial functional
 change or a change that affects how you use or install the
 application.
 
+1.0-570: IPv6 support, which introduces new configuration file options
+for circuits and http.  The old syntax for circuit destination
+configuration specs still works but is deprecated (it's harder to use)
+and does not handle IPv6 addresses.
+PyDECnet now requires the psutil module.
+
 1.0-556: Ethernet "tap" support for Linux is now included, thanks to
 Keith Halewood for supplying the patch.  
 
