Small changes to Framer test so the test patterns it use look like fairly sane frames, rather than corrupt ones, when viewed by Wireshark.
Also clean up a leftover debug print in nsp, and fix some
documentation omissions including a missing item in CHANGES.txt.


git-svn-id: svn://akdesign.dyndns.org/pydecnet/trunk/pydecnet@592 02bf3f84-b523-46f3-a765-a93b7296b289

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,6 +3,14 @@ change at the top.  "Significant" means a non-trivial functional
 change or a change that affects how you use or install the
 application.
 
+----------------------------------------
+
+1.0-586: Add loop node support (currently only for point to point
+circuits).
+Add support for DDCMP over synchronous links, using a USB-connected
+synchronous framer.  See https://github.com/pkoning2/ddcmp for
+hardware and software design files and documentation for that device.
+
 1.0-584: Since the circuit configuration switches --destination,
 --dest-port, --source, and --source-port were confusing for "listen"
 mode circuits and other cases where one would naturally think in terms
