--- a/pydecnet/doc/install.txt
+++ b/pydecnet/doc/install.txt
@@ -1,6 +1,10 @@
 Prerequisites
 
-PyDECnet requires Python 3.3 or later.
+PyDECnet requires Python 3.3 or later.  But note that versions 3.6 and
+earlier are now (2022) no longer supported.  The current release of
+PyDECnet has been tested with Python 3.6 through 3.10 and with
+3.11 alpha 4.  Version 3.7 or later is recommended; some features are
+not available with version 3.6.
 
 Apart from standard Python modules, PyDECnet requires the "psutil"
 module.
@@ -22,7 +26,6 @@ command:
 
    pip3 list
    
-
 Installation
 
 Installation from the Subversion repository
